Fix tabs on mobile

--- a/src/assets/scss/pages/pay-online.scss
+++ b/src/assets/scss/pages/pay-online.scss
@@ -18,12 +18,30 @@
 		}
 	}
 
-	.BountyRowDefault {
+	.bounty-row-wrap-default {
 		.bounty_col {
-			padding-left: 0;
+			&:nth-of-type(2) {
+				padding-left: 30px;
+			}
+			&:nth-of-type(3) {
+				padding-left: 30px;
+			}
+		}
+
+		.toggleContent {
+			padding-left: 30px;
 		}
 	}
 
+	@media screen and (min-width: 48em) {
+		.bounty-row-wrap-default {
+			.bounty_col {
+				&:nth-of-type(2) {
+					padding-left: 10px;
+				}
+			}
+		}
+	}
 	@media screen and (min-width: 62em) {
 		.bounty_col {
 			padding-left: 0px;
@@ -31,6 +49,18 @@
 			input.Bounty {
 				position: relative;
 				top: 0;
+			}
+		}
+
+
+		.bounty-row-wrap-default {
+			.bounty_col {
+				&:nth-of-type(2) {
+					padding-left: 0;
+				}
+				&:nth-of-type(3) {
+					padding-left: 0;
+				}
 			}
 		}
 	}
